--- a/index.html
+++ b/index.html
@@ -9,15 +9,32 @@
 <body>
     <div id="app">
         {{message}}
+        <ol>
+            <todo-item v-for="item in groceryList" v-bind:todo="item" v-bind:key="item.id"></todo-item>
+        </ol>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
-    var app = new Vue({
-        el:'#app',
-        data:{
-            message:'Hello Vue!'
-        }
-    })
+        Vue.component('todo-item',{
+            props:['todo'],
+            template:'<li class="text">{{ todo.text }}</li>'
+        })
+        var app = new Vue({
+            el:'#app',
+            data:{
+                message:'Hello Vue!',
+                groceryList:[{
+                    id:0,
+                    text:'蔬菜'
+                },{
+                    id:1,
+                    text:'奶酪'
+                },{
+                    id:2,
+                    text:'牛奶'
+                }]
+            }
+        })
     </script>
 </body>
 </html>
